--- a/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
+++ b/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
@@ -1,63 +1,37 @@
-<p>toolbar works!</p>
-
 <p>
-    <mat-toolbar>
-      <span>My Application</span>
-    </mat-toolbar>
-  </p>
-  
-  <p>
-    <mat-toolbar>
-     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <mat-toolbar color="primary">
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
+    </button> -->
+    <span>Stage 2 - Test</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button">
+      <li class="button__li">
+        <a class="button__li--dashboard" routerLink="/dashboard">Dashboard</a>
+      </li>
+    </button>
+    <span class="example-spacer"></span>
+
+    <button mat-icon-button class="example-icon " aria-label="Example icon-button ">
+      <li class="button__li">
+        <a class="button__li--dashboard" routerLink="/profile">Profile</a>
+      </li>
+    </button>
+    <span class="example-spacer"></span>
+
+    <button mat-icon-button class="example-icon " aria-label="Example icon-button ">
+      <li class="button__li">
+        <a class="button__li--dashboard" routerLink="/schedule">Schedule</a>
+      </li>
+    </button>
+    <span class="example-spacer"></span>
+
+    <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-     <mat-icon>share</mat-icon>
-   </button>
+      <mat-icon>share</mat-icon>
+    </button> -->
   </mat-toolbar>
-  </p>
-  
-  <p>
-    <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>My App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <!-- <mat-icon>share</mat-icon> -->
-      </button>
-    </mat-toolbar>
-  </p>
-  
-  <p>
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <span>My App</span>
-        <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </mat-toolbar-row>
-  
-      <mat-toolbar-row>
-        <span>Second Line</span>
-        <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-          <mat-icon>share</mat-icon>
-        </button>
-      </mat-toolbar-row>
-    </mat-toolbar>
-  </p>
-  
+</p>
