--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,6 +1,56 @@
-<p>dashboard works!</p>
-<div class="container">
-  <div class="container__card">
-    <app-card-creation></app-card-creation>
+
+<div class="content">
+  <div>
+    <app-card-creation></app-card-creation>>
   </div>
+
+  <div fxLayout="row wrap">
+    <div fxFlex="33%" *ngFor="let article of articles">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title>{{article.title_display}}</mat-card-title>
+          <mat-card-subtitle>{{article.journal}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p ngClass="">
+            {{article.abstract}}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+
 </div>
+
+<!-- <div class="container">
+
+  <div>
+    <mat-grid-list cols="2" rowHeight="700px">
+      <mat-grid-tile [colspan]="1" [rowspan]="1" *ngFor="let article of articles">
+
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{article.title_display}}</mat-card-title>
+            <mat-card-subtitle>{{article.journal}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p ngClass="">
+              {{article.abstract}}
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+          </mat-card-actions>
+        </mat-card>
+
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+</div> -->
