--- a/src/app/modules/dashboard/dashboard.component.sass
+++ b/src/app/modules/dashboard/dashboard.component.sass
@@ -1,11 +1,17 @@
+.content
 
+  &__cards
+    margin: 50px
 
-.mat-card
-  //margin: 10px
-  //padding: 56px
-  border: 5px solid red
+  &__cards--card
+    border: 1px solid
+    box-shadow: 5px #5375ed
+    margin: 10px
 
-.example-header-image
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg')
-  //background-size: cover
+    &__actions
+      display: flex
+      justify-content: space-between
+
+      &--button
+        margin: 10px
 
