first section add new cards and button edit work

--- a/src/app/modules/dashboard/components/card-creation/card-creation.component.html
+++ b/src/app/modules/dashboard/components/card-creation/card-creation.component.html
@@ -2,7 +2,7 @@
   <h2 class="container__title">Publish Your Research </h2>
   <mat-form-field appearance="fill">
     <mat-label>Title</mat-label>
-    <input matInput [(ngModel)]="cardArticle.title">
+    <input matInput [(ngModel)]="cardArticle.title_display">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Journal</mat-label>
