--- a/src/app/modules/dashboard/components/card-creation/card-creation.component.html
+++ b/src/app/modules/dashboard/components/card-creation/card-creation.component.html
@@ -14,6 +14,6 @@
   </mat-form-field>
   <div class="container__div">
     <button mat-raised-button color="primary" class="container__div--button" (click)="createCard()">Add</button>
-    <button mat-raised-button color="accent" class="container__div--button">Edit</button>
+    <button mat-raised-button color="accent" class="container__div--button" (click)="updateCard()">Update</button>
   </div>
 </div>
