--- a/src/app/modules/dashboard/dashboard.component.sass
+++ b/src/app/modules/dashboard/dashboard.component.sass
@@ -3,15 +3,21 @@
   &__cards
     margin: 50px
 
-  &__cards--card
-    border: 1px solid
-    box-shadow: 5px #5375ed
+    &--card
+      border: 1px solid #5375ed
+      margin: 10px
+    &--cardEdit
+      border: 5px solid #e21f18
+      margin: 10px
+
+
+.div__actions
+  display: flex
+  justify-content: space-between
+
+  &--btn
     margin: 10px
 
-    &__actions
-      display: flex
-      justify-content: space-between
-
-      &--button
-        margin: 10px
+  &--classEdit
+    display: none
 
