--- a/src/app/modules/dashboard/dashboard.component.sass
+++ b/src/app/modules/dashboard/dashboard.component.sass
@@ -6,9 +6,20 @@
     &--card
       border: 1px solid #5375ed
       margin: 10px
+
+      &--close
+        position: absolute
+        top: 0
+        right: 0
+        padding: 9px
+        line-height: 14px
+        min-width: auto
+
     &--cardEdit
       border: 5px solid #e21f18
       margin: 10px
+
+
 
 
 .div__actions
@@ -19,5 +30,8 @@
     margin: 10px
 
   &--classEdit
+    display: none
+
+  &--withoutCancelEditCard
     display: none
 
