modified code to improve functionality and best practices

--- a/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
+++ b/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
@@ -1,29 +1,9 @@
 <p>
   <mat-toolbar color="primary">
-
     <span>Stage 2 - Test</span>
     <span class="example-spacer"></span>
-
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button">
-      <li class="button__li">
-        <a class="button__li--dashboard" routerLink="/dashboard">Dashboard</a>
-      </li>
-    </button>
-    <span class="example-spacer"></span>
-
-    <button mat-icon-button class="example-icon " aria-label="Example icon-button ">
-      <li class="button__li">
-        <a class="button__li--dashboard" routerLink="/profile">Profile</a>
-      </li>
-    </button>
-    <span class="example-spacer"></span>
-
-    <button mat-icon-button class="example-icon " aria-label="Example icon-button ">
-      <li class="button__li">
-        <a class="button__li--dashboard" routerLink="/schedule">Schedule</a>
-      </li>
-    </button>
-    <span class="example-spacer"></span>
-
+    <button mat-button color="accent" routerLink="/dashboard">Dashboard</button>
+    <button mat-button color="accent" routerLink="/profile">Profile</button>
+    <button mat-button color="accent" routerLink="/schedule">Schedule</button>
   </mat-toolbar>
 </p>
