--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,1 +1,8 @@
-<p>main-layout works!</p>
+<div>
+  <div>
+    <app-toolbar></app-toolbar>
+  </div>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
