--- a/src/app/modules/dashboard/components/form/form.component.html
+++ b/src/app/modules/dashboard/components/form/form.component.html
@@ -1,19 +1,23 @@
-<div class="container">
+<div class="form">
   <h2 class="container__title">Publish Your Research </h2>
+
   <mat-form-field appearance="fill">
     <mat-label>Title</mat-label>
     <input matInput [(ngModel)]="cardArticle.title_display">
   </mat-form-field>
+
   <mat-form-field appearance="fill">
     <mat-label>Journal</mat-label>
     <input matInput [(ngModel)]="cardArticle.journal">
   </mat-form-field>
+
   <mat-form-field appearance="fill">
     <mat-label>Abstract</mat-label>
     <textarea matInput [(ngModel)]="cardArticle.abstract"></textarea>
   </mat-form-field>
+
   <div class="container__div">
     <button mat-raised-button color="primary" class="container__div--button" (click)="createCard()" [ngClass]="(cardArticle.isEdit)? 'container__div--displayNone' : 'container__div--displayBlock'">Add</button>
-    <button mat-raised-button color="accent" class="container__div--button" (click)="createCard()" [ngClass]="(!cardArticle.isEdit)? 'container__div--displayNone' : 'container__div--displayBlock'">Update</button>
+    <!-- <button mat-raised-button color="accent" class="container__div--button" (click)="createCard()" [ngClass]="(!cardArticle.isEdit)? 'container__div--displayNone' : 'container__div--displayBlock'">Update</button> -->
   </div>
 </div>
