--- a/src/app/modules/dashboard/dashboard.component.sass
+++ b/src/app/modules/dashboard/dashboard.component.sass
@@ -1,37 +1,13 @@
-.content
+.container
 
-  &__cards
-    margin: 50px
+  &__articles
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    justify-content: flex-start
+    gap: 10px
 
-    &--card
-      border: 1px solid #5375ed
-      margin: 10px
+  &__card
+    flex: 0 1 24%
 
-      &--close
-        position: absolute
-        top: 0
-        right: 0
-        padding: 9px
-        line-height: 14px
-        min-width: auto
-
-    &--cardEdit
-      border: 5px solid #e21f18
-      margin: 10px
-
-
-
-
-.div__actions
-  display: flex
-  justify-content: space-between
-
-  &--btn
-    margin: 10px
-
-  &--classEdit
-    display: none
-
-  &--withoutCancelEditCard
-    display: none
 
