updated code with animations

--- a/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
+++ b/src/app/layouts/main-layout/components/toolbar/toolbar.component.html
@@ -2,8 +2,8 @@
   <mat-toolbar color="primary">
     <span>Stage 2 - Test</span>
     <span class="example-spacer"></span>
-    <button mat-button color="accent" routerLink="/dashboard">Dashboard</button>
-    <button mat-button color="accent" routerLink="/profile">Profile</button>
-    <button mat-button color="accent" routerLink="/schedule">Schedule</button>
+    <button mat-button color="warm" routerLink="/dashboard">Dashboard</button>
+    <button mat-button color="warm" routerLink="/profile">Profile</button>
+    <button mat-button color="warm" routerLink="/schedule">Schedule</button>
   </mat-toolbar>
 </p>
