--- a/src/app/modules/dashboard/components/card/card.component.sass
+++ b/src/app/modules/dashboard/components/card/card.component.sass
@@ -14,6 +14,9 @@
     display: flex
     flex-direction: row
     gap: 10px
+  &__close
+    cursor: pointer
 
 .card__border--red
   box-shadow: rgb(249, 11, 11) 0 2px 8px 0
+
