--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -10,6 +10,7 @@
     [article]="article"
     (editArticleEmitter)="editArticle($event)"
     (cancelEditingEmitter)="cancelEditing($event)"
+    (deleteCardEmitter)="deleteCard($event)"
     ></app-card>
   </div>
 </div>
