--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -14,3 +14,20 @@
     ></app-card>
   </div>
 </div>
+
+<!-- <div class="container">
+  <div>
+    <app-form [editingArticle]="editingArticle"
+      (addArticleEmitter)="addArticle($event)"
+    ></app-form>
+  </div>
+  <div class="container__articles">
+    <app-card class="container__card"
+      *ngFor="let article of articleList"
+      [article]="article"
+      (editArticleEmitter)="editArticle($event)"
+      (cancelEditingEmitter)="cancelEditing($event)"
+      (deleteCardEmitter)="deleteCard($event)"
+    ></app-card>
+  </div>
+</div> -->
