--- a/src/app/modules/dashboard/components/form/form.component.html
+++ b/src/app/modules/dashboard/components/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="container">
   <h2 class="container__title">Publish Your Research </h2>
 
   <mat-form-field appearance="fill">
