--- a/src/app/modules/dashboard/dashboard.component.sass
+++ b/src/app/modules/dashboard/dashboard.component.sass
@@ -1,13 +1,3 @@
 .container
-
   &__articles
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    justify-content: flex-start
-    gap: 10px
-
-  &__card
-    flex: 0 1 24%
-
-
+    margin: 15px
