--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
     <app-card
       [articleList]="articleList"
       (editArticleEmitter)="editArticle($event)"
+      (showAbstractEmitter)="showAbstract($event)"
       (addEditArticleEmitter)="addEditArticle($event)"
       (cancelEditingEmitter)="cancelEditing($event)"
       (deleteCardEmitter)="deleteCard($event)"
